<resources>
    <string name="app_name">ClickerApp</string>
    <string name="clicker_service_name">Clicker service owned by ClickerApp ©</string>
    <string name="usage_stats_request">You have to allow usage stats permission for ClickerServiceApp in system settings</string>
    <string name="overlay_request">You have to allow draw overlay permission for ClickerServiceApp in system settings</string>
    <string name="action_refuse">Refuse</string>
    <string name="action_proceed">Proceed</string>
    <string name="accessibility_service_id">com.perevodchik.clickerapp.clicker.ClickerService</string>
    <string name="double_tap">Double tap</string>
    <string name="swipe">Swipe</string>
    <string name="tap">Tap</string>
    <string name="add_action">Add action</string>
    <string name="apply">Apply</string>
    <string name="patterns">Patterns</string>
    <string name="y_coord">Y:</string>
    <string name="x_coord">X:</string>
    <string name="action">Action</string>
    <string name="repeat_count">Repeat:</string>
    <string name="is_enable">Enable</string>
    <string name="is_loop">Loop</string>
    <string name="position_param">Position</string>
    <string name="start">Start</string>
    <string name="pattern_name">Pattern name</string>
    <string name="steps_count">Steps:</string>
    <string name="x1_coord">X2:</string>
    <string name="y1_coord">Y2:</string>
    <string name="start_delay">Start delay:</string>
    <string name="duration">Duration:</string>
    <string name="y_coord_hint">y</string>
    <string name="x_coord_hint">x</string>
    <string name="x1_coord_hint">x2</string>
    <string name="y1_coord_hint">y2</string>
    <string name="server_address">Server address</string>
    <string name="input_server_address">address…</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_task">Do you really want delete this?</string>
    <string name="stop">Stop</string>
    <string name="export">Export</string>
    <string name="coordinate_param">Show type</string>
    <string name="overlay">Overlay</string>
    <string name="user_id">User id</string>
    <string name="input_id">id…</string>
    <string name="extra_delay">Extra delay</string>
    <string name="delay">delay…</string>
    <string name="execute_time">Pattern time</string>
    <string name="close">Close</string>
    <string name="input_name">Input pattern name</string>
    <string name="input_time">Input pattern time</string>
    <string name="pattern_time">Pattern time</string>
    <string name="test_pattern_start">Test pattern start</string>
    <string name="test_pattern_end">Test pattern end</string>
    <string name="read_log">Read log</string>
</resources>
