<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/apply_settings"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:layout_marginEnd="20dp"
            style="@style/Button"/>

        <Button
            android:id="@+id/close_settings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/back"
            style="@style/Button" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_address"
                android:textColor="@color/blackOlive"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/main_server_param"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/input_server_address"
                android:inputType="text"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:layout_marginTop="25dp"
                android:textColor="@color/blackOlive"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_id_param"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/input_id"
                android:inputType="text"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_delay"
                android:layout_marginTop="25dp"
                android:textColor="@color/blackOlive"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/extra_delay_param"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/delay"
                android:inputType="text"
                tools:ignore="Autofill" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>