<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/outerSpace"
    android:gravity="center"
    android:padding="15dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_name"
        android:textColor="@color/mintCream"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/input_pattern_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/pattern_name"
        android:textColorHint="@color/colorAccent"
        android:background="@null"
        android:textStyle="bold"
        android:textColor="@color/mintCream"
        android:textSize="18sp"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_time"
        android:textColor="@color/mintCream"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/input_pattern_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:hint="@string/pattern_time"
        android:textColorHint="@color/colorAccent"
        android:background="@null"
        android:textStyle="bold"
        android:textColor="@color/mintCream"
        android:textSize="18sp"
        tools:ignore="Autofill,TextFields" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/apply_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:textColor="@color/mintCream"
            android:textSize="20sp"
            android:text="@string/export"
            tools:ignore="ButtonStyle,RtlSymmetry" />

        <Button
            android:id="@+id/close_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/mintCream"
            android:textSize="20sp"
            android:text="@string/close"
            tools:ignore="ButtonStyle,RtlSymmetry"/>

    </LinearLayout>

</LinearLayout>