<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/outerSpace"
    android:gravity="center">

    <Spinner
        android:id="@+id/action_param"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/action"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/position_param"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp">

        <CheckBox
            android:id="@+id/loop_param"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/is_loop"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/mintCream" />

        <CheckBox
            android:id="@+id/enable_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/is_enable"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/mintCream" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/repeat_count"
            android:textColor="@color/mintCream"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/repeat_param"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@null"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/start_delay"
            android:textColor="@color/mintCream"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/start_delay_param"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@null"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            tools:ignore="Autofill,LabelFor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/duration"
            android:textColor="@color/mintCream"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/duration_param"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@null"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/close_modal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textAllCaps="false"
            android:text="@string/close"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/mintCream"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/export_modal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            android:text="@string/export"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/mintCream"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/delete_modal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textAllCaps="false"
            android:text="@string/delete"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/mintCream"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>