<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scenario_actions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/add_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@null"
            android:text="@string/add_action"
            android:textAllCaps="false"
            android:layout_gravity="end"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/apply_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:padding="10dp"
            android:background="@null"
            android:text="@string/apply"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:padding="10dp"
            android:background="@null"
            android:text="@string/export"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>