<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_pane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/button_toggle_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        style="@style/Button"
        android:text="@string/overlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settings"
        style="@style/Button"/>

    <Button
        android:id="@+id/add_scenario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        style="@style/Button"
        android:text="@string/patterns"/>

    <Button
        android:id="@+id/write_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        style="@style/Button"
        android:text="@string/read_log"/>

    <EditText
        android:id="@+id/log_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:lines="23"
        tools:ignore="Autofill,LabelFor,TextFields" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_marginTop="15dp">-->

<!--        <EditText-->
<!--            android:id="@+id/pattern_name"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_marginLeft="8dp"-->
<!--            android:layout_marginRight="8dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:textColor="@color/colorAccent"/>-->
<!--        <Button-->
<!--            android:id="@+id/start_pattern"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="8dp"-->
<!--            android:layout_marginRight="8dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:text="@string/start"-->
<!--            style="@style/Button"/>-->

<!--    </LinearLayout>-->

</LinearLayout>